<resources>
    <string name="app_name">Flashlight</string>
    <string name="settings">Settings</string>
    <string name="off_on_destroy">Turn off on exit</string>
    <string name="play_sounds">Switch sound</string>
    <string name="status_bar">Show status bar</string>
    <string name="on_on_startup">Turn on on startup</string>
    <string name="flashlight">Flashlight</string>
    <string name="error">Error</string>
    <string name="dont_support_message">Sorry, your device doesn\'t support flash light!</string>
    <string name="ok">OK</string>
    <string name="button_back_setting">Submit</string>
</resources>
